syntax = "proto3";

message ReqPost {
    int64 writerId = 1;
    string title = 2;
    string content = 3;
    string tag = 4;
}

message ResSinglePost {
    int64 postId = 1;
    int64 writerId = 2;
    string title = 3;
    string content = 4;
    string tag = 5;
    int64 createAt = 6;
    int64 updateAt = 7;
}

message ResMultiplePost {
    repeated ResSinglePost posts = 1;
}